# ao-analytics-migrator

./: .dockerignore  .env  .env.prod  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  download.sh
.sqlx/: query-0013b4b9b39e421100451331fa9a89c52b758120b9aba969b58a04a2a8f69e61.json  query-0a5fcd16ee5764342e5b6a70609a34a6978525822db39d8cf9b0c631b65f83d9.json  query-47ac603f02e92cb8ec75c06c4db917bd8cdc07b33cef660ca3434565d8f5f73c.json  query-60153edd81c557ffede2a6868ba91fcbd657fb76d7176f489b6608fa3b7023d9.json  query-61ff5677590602738071b7588a739bb658500ca9b8ba03aa875d7a9b9e0a5e63.json  query-6c3de74484fd34cc271104390fe852a0793883cc579f9a9493f1403b2375317c.json  query-778043cd977f05307b688b2916d0b803b88ab4fe7f876c40fe6a6db7c65513d3.json  query-8371922f57bb76c611176b43879c88123dc40ef1bb5bf3adfa93ea322d6c5dfc.json  query-921f3bc775e4fa9f1c23c261f7ae28ab817220a15839f006deba7ce087df08f6.json  query-b567c585e8e9b4f1ad32e9f56d64d1d41d7d39f5646883441d170a4172076a7a.json  query-cf411d6c972bef6e108b3ec5ac324e6bf65f74aa2b789c632b1289d51ccd16fe.json  query-d72a726bda8a0d6e92a4f3a7a98507c50bbd166ec6a543c8166818d757e719d7.json  query-eb8f7b1e6aa05fffdde14e1d228ea90eb118da829b1d683e2202388bafd181e1.json  query-f563e7b26ec8c0eeaacc477db94d3b10e8ca2c5994032321ca9f5f73142282a1.json
src/: main.rs
src/models/: json.rs
src/utils/: config.rs  db.rs  json.rs  mod.rs
