[package]
name = "ao-analytics-migrator"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
futures-util = "0.3.31"
bytes = "1.8.0"
serde_json = "1.0.133"
serde = "1.0.215"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "macros",
    "runtime-tokio",
    "time",
    "chrono",
] }
dotenv = "0.15.0"
ao-analytics-models = { git = "https://github.com/ao-analytics/ao-analytics-models.git", version = "*" }
tracing = "0.1.40"
config = { git = "https://github.com/veqox/config-rs.git", version = "*" }
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.9", features = ["rustls-tls"] }

[dev-dependencies]
tokio = { version = "1.41.1", features = ["rt-multi-thread", "time", "sync"] }
